# PySparkTutorial

./: .gitignore  main.py  pyproject.toml
docs/spark_installation/win/: 01.install_spark_on_windows.md  use_pyspark_on_windows.md
notebooks/pyspark/basics/L01_PySpark_Intro/: S01_spark_session_config.ipynb
scripts/win/: check_hadoop_spark.ps1
