[project]
name = "pysparktutorial"
version = "0.1.0"
description = "In this repo, we will learn how to work with pyspark"
authors = ["pengfei <liu.pengfei@hotmail.fr>"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "notebook>=7.5.0",
    "pyspark==3.5.7",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
